new proj/src/objects/ITO_Commercial__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_Currency_of_Bond_or_Bank_Guaranty4__c</fullName>
        <label>Currency of Bond or Bank Guaranty4</label>
        <picklist>
            <picklistValues>
                <fullName>AFN Afghani Afganistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL Lek Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZD Dinar Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP Peseta Andorran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AOA New Kwanza Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARS Peso Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWG Guilder Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD Dollar Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZM Manat Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZN Manat (New) Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSD Dollar Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHD Dinar Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDT Taka Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBD Dollar Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYR Ruble Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZD Dollar Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XOF Franc Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMD Dollar Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTN Ngultrum Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOB Boliviano Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAM Marka Bosnia Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BWP Pula Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL Real Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BND Dollar Brunei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGN Lev Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMK Kyat Burma / Myanmar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIF Franc Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KHR Riel Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD Dollar Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVE Escudo Cape Verde</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Cust_Contracting_Entity_Legal_Ent__c</fullName>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Custom_Duties_Reimbursable__c</fullName>
        <description>Custom Duties Reimbursable?</description>
        <label>Custom Duties Reimbursable</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Custom_Duties__c</fullName>
        <description>Custom Duties Reimbursable ?</description>
        <label>Custom Duties Reimbursable</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Customer_VAT_Registration__c</fullName>
        <label>Customer VAT Registration Number:</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_DUNS_Number_or_CATDUNS_Number__c</fullName>
        <label>DUNS Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Document_Retention_Period__c</fullName>
        <label>Document Retention Period:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Does_Contrac_incl_GE_Credit_Rating__c</fullName>
        <description>Does Contract include GE Credit Rating downgrading Provisions ?</description>
        <label>Does Contract include GE Credit Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_ESPL_Segments__c</fullName>
        <description>ESPL Segments</description>
        <label>ESPL Segments</label>
        <picklist>
            <picklistValues>
                <fullName>PS - Field Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS - Repairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS - TDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS - Performance Services Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS - Performance Services Steam</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Escalation__c</fullName>
        <description>Escalation</description>
        <label>Escalation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Expected_Commercial_Operation_Date__c</fullName>
        <description>Expected Commercial Operation Date (if New Unit)</description>
        <label>Expected Commercial Operation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Expected_Liquidated_Damages_amount__c</fullName>
        <label>Expected Liquidated Damages amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Expiration_Date2__c</fullName>
        <label>Expiration Date2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Expiration_Date3__c</fullName>
        <label>Expiration Date3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Expiration_Date4__c</fullName>
        <label>Expiration Date4</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Explain_Contract_or_PO_Curr_Diff__c</fullName>
        <label>Explain Contract or PO Currency Differen</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Explain_Embed_Deriv_details_con__c</fullName>
        <label>Explain Embedded Derivatives details con</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Explanation__c</fullName>
        <label>Explanation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_External_to_GE__c</fullName>
        <description>External to GE Order ?</description>
        <label>External to GE Order</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_FX_Hedging__c</fullName>
        <description>FX Hedging Recommended?</description>
        <label>FX Hedging Recommended?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Financial_Security_in_Contract__c</fullName>
        <description>Is there a 2nd source of Financial Security in Contract?</description>
        <label>Financial Security in Contract</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Freight_Charges_Reimbursable__c</fullName>
        <description>Freight Charges Reimbursable?</description>
        <label>Freight Charges Reimbursable?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Freight_Charges__c</fullName>
        <description>Freight Charges reimbursable ?</description>
        <label>Freight Charges reimbursable</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Func_Currency_of_2nd_GE_contractin__c</fullName>
        <label>Functional Currency of 2nd GE contractin</label>
        <picklist>
            <picklistValues>
                <fullName>AFN Afghani Afganistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL Lek Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZD Dinar Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP Peseta Andorran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AOA New Kwanza Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARS Peso Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWG Guilder Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD Dollar Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZM Manat Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZN Manat (New) Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSD Dollar Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHD Dinar Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDT Taka Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBD Dollar Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYR Ruble Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZD Dollar Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XOF Franc Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMD Dollar Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTN Ngultrum Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOB Boliviano Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAM Marka Bosnia Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BWP Pula Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL Real Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BND Dollar Brunei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGN Lev Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMK Kyat Burma / Myanmar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIF Franc Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KHR Riel Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD Dollar Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVE Escudo Cape Verde</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Func_Currency_of_3rd_GE_Contractin__c</fullName>
        <description>Functional Currency of 3rd  GE Contracting Entity</description>
        <label>Functional Currency of 3rd  GE Contracti</label>
        <picklist>
            <picklistValues>
                <fullName>AFN Afghani Afganistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL Lek Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZD Dinar Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP Peseta Andorran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AOA New Kwanza Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARS Peso Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWG Guilder Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD Dollar Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZM Manat Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZN Manat (New) Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSD Dollar Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHD Dinar Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDT Taka Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBD Dollar Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYR Ruble Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZD Dollar Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XOF Franc Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMD Dollar Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTN Ngultrum Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOB Boliviano Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAM Marka Bosnia Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BWP Pula Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL Real Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BND Dollar Brunei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGN Lev Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMK Kyat Burma / Myanmar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIF Franc Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KHR Riel Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD Dollar Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVE Escudo Cape Verde</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Func_Currency_of_4th_GE_Contractin__c</fullName>
        <label>Functional Currency of 4th GE Contractin</label>
        <picklist>
            <picklistValues>
                <fullName>AFN Afghani Afganistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL Lek Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZD Dinar Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP Peseta Andorran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AOA New Kwanza Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARS Peso Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWG Guilder Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD Dollar Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZM Manat Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZN Manat (New) Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSD Dollar Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHD Dinar Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDT Taka Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBD Dollar Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYR Ruble Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZD Dollar Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XOF Franc Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMD Dollar Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTN Ngultrum Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOB Boliviano Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAM Marka Bosnia Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BWP Pula Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL Real Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BND Dollar Brunei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGN Lev Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMK Kyat Burma / Myanmar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIF Franc Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KHR Riel Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD Dollar Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVE Escudo Cape Verde</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Functional_Currency__c</fullName>
        <label>Functional Currency of 1st GE contractin</label>
        <picklist>
            <picklistValues>
                <fullName>AFN Afghani Afganistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL Lek Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZD Dinar Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP Peseta Andorran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AOA New Kwanza Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARS Peso Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWG Guilder Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD Dollar Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZM Manat Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZN Manat (New) Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSD Dollar Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHD Dinar Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDT Taka Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBD Dollar Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYR Ruble Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZD Dollar Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XOF Franc Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMD Dollar Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTN Ngultrum Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOB Boliviano Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAM Marka Bosnia Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BWP Pula Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL Real Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BND Dollar Brunei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGN Lev Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMK Kyat Burma / Myanmar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIF Franc Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KHR Riel Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD Dollar Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVE Escudo Cape Verde</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Funding_Type__c</fullName>
        <label>Funding Type</label>
        <picklist>
            <picklistValues>
                <fullName>Stimulus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stimulus + US government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Funded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>World Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other credit export agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Capital</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_GoldID__c</fullName>
        <label>GoldID</label>
        <picklist>
            <controllingField>GE_ES_CEName__c</controllingField>
            <picklistValues>
                <fullName>IF0048</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IF0049</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I10416</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GY7006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IF1358</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Gold_ID__c</fullName>
        <description>Gold ID 2nd picklist</description>
        <label>Gold ID</label>
        <picklist>
            <picklistValues>
                <fullName>IF0048</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IF0049</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I10416</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GY7006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IF1358</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Incoterm__c</fullName>
        <label>Incoterm</label>
        <picklist>
            <picklistValues>
                <fullName>EXW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Is_3rd_source_of_Finan_Security__c</fullName>
        <description>Is there a 3rd source of Financial Security in Contract?</description>
        <label>Is 3rd source of Financial Security</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Is_4th_source_of_Finan_Security__c</fullName>
        <description>Is there a 4th source of Financial Security in Contract?</description>
        <label>Is  4th source of Financial Security</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Is_Billing_Curr_same_as_Cont_P__c</fullName>
        <description>Is Billing Currency same as Contract / PO Currency?</description>
        <label>Is Billing Currency same as Contract / P</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Is_Billing__c</fullName>
        <description>Is Billing Currency same as Contract/ PO Currency ?</description>
        <label>Is Billing Currency same as Contract/ PO</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Is_Financial_Security_in_Contract2__c</fullName>
        <label>Is Financial Security in Contract2?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Is_Financial_Security_in_Contract3__c</fullName>
        <label>Is Financial Security in Contract3?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Is_Financial_Security_in_Contract4__c</fullName>
        <label>Is Financial Security in Contract4?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Is_contract__c</fullName>
        <label>Is contract subject standard to 104 audi</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Is_the_Cust_the_Importer_of_Rec__c</fullName>
        <label>Is the Customer the Importer of Record?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Is_the_onshore_Legal_Entity__c</fullName>
        <label>Is the onshore Legal Entity</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Is_the_onshore_Legal_ent_creat__c</fullName>
        <label>Is the onshore Legal entity creating</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Is_there_a_2nd_source_of_Fin_Secur__c</fullName>
        <label>Is there a 2nd source of Financial Secur</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>